# Data-Science-Toolkit

./: .gitignore  README.md  pyproject.toml
Assignments_and_CA1/: CA1_Employee_Analysis.py  CA1_Performance_Rating.py
CA1/: main.py
Datasets/: .~lock.SALES.xlsx#  Data.csv  SALES.xlsx
May/: main2.py
Practise/: main.py
Python/: ABC.csv  pyproject.toml
Python/feb16/: main.py
Python/feb2/: main.py
Python/feb23/: main.py
Python/feb5/: main.py
Python/feb9/: main.py
Unit_01_Introduction_to_Python_for_Data_Science/: 01_genai_api_basics.py
Unit_02_Data_Manipulation_with_NumPy_and_Pandas/: 01_numpy_basics.py  02_numpy_arrays_and_zeros.py  05_numpy_case_study.py  06_numpy_student_grades.py  09_pandas_loading_and_cleaning.py
Unit_03_Data_Visualization_with_Matplotlib_and_Seaborn/: 01_matplotlib_seaborn_basics.py  02_scatter_plots_and_customization.py
Unit_04_Exploratory_Data_Analysis_EDA/: 03_eda_superstore_analysis.py
Unit_05_Introduction_to_Statistical_Analysis/: 01_z_test_and_p_value.py  02_t_test_one_sample.py  03_z_test_manual_calculation.py  04_chi_square_test.py  05_t_test_sample_data.py  06_Case1.py
Unit_06_Exploring_the_Role_of_Machine_Learning/: 02_titanic_classification_concept.py  03_VIF_Cal.py  04_VIF_Cal2.py
april/: main.py
april6/: main.py
feb16/: .main.py.kate-swp
march12/: main2.py
march30/: main.py
march9/: main.py
