[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.66.0",
    "google-generativeai>=0.8.6",
    "ipython>=9.11.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "plotly>=6.6.0",
    "polars>=1.38.1",
    "python-dotenv>=1.2.2",
    "python-lsp-server>=1.14.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tavily-python>=0.7.23",
]
