[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "plotly>=6.6.0",
    "polars>=1.38.1",
    "python-lsp-server>=1.14.0",
    "seaborn>=0.13.2",
]
